# memorandum/docs/swagger.json
@@ -1,20 +1,23 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a demo using Hertz.",
-        "title": "HertzTest",
+        "description": "用Hertz创建的简单备忘录demo.",
+        "title": "Taosuの备忘录demo",
         "contact": {},
         "version": "1.0"
     },
     "paths": {
         "/auth/hello": {
             "get": {
-                "description": "Description 你好",
+                "description": "token模板\n\"taosu *****.**************.************\"",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
+                ],
+                "tags": [
+                    "测试"
                 ],
                 "summary": "你好",
                 "parameters": [
@@ -38,6 +41,9 @@
         "/login": {
             "post": {
                 "description": "Description 登陆",
+                "tags": [
+                    "user"
+                ],
                 "summary": "登陆",
                 "parameters": [
                     {
@@ -66,6 +72,9 @@
         "/signin": {
             "post": {
                 "description": "Description 注册",
+                "tags": [
+                    "user"
+                ],
                 "summary": "注册",
                 "parameters": [
                     {
@@ -84,6 +93,173 @@
                 "responses": {
                     "200": {
                         "description": "message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/createitem": {
+            "get": {
+                "description": "Description 创建待办事项",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "item_CRUD"
+                ],
+                "summary": "增",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT-TOKEN",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "item",
+                        "name": "item",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data\",\"msg\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/deleteitem": {
+            "post": {
+                "description": "Description 删除待办事项",
+                "tags": [
+                    "item_CRUD"
+                ],
+                "summary": "删",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT-TOKEN",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "item",
+                        "name": "item",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data\",\"msg\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/edititemstatus": {
+            "post": {
+                "description": "Description 修改待办事项状态",
+                "tags": [
+                    "item_CRUD"
+                ],
+                "summary": "改",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT-TOKEN",
+                        "name": "Authorization",
+                        "in": "header"
+                    },
+                    {
+                        "type": "string",
+                        "description": "item",
+                        "name": "item",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "status",
+                        "name": "status",
+                        "in": "formData"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data\",\"msg\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/finditem": {
+            "get": {
+                "description": "Description 查询待办事项",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "item_CRUD"
+                ],
+                "summary": "查",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT-TOKEN",
+                        "name": "Authorization",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data\",\"msg\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/test": {
+            "get": {
+                "description": "Description 创建待办事项",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "item_CRUD"
+                ],
+                "summary": "测试",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer JWT-TOKEN",
+                        "name": "Authorization",
+                        "in": "header"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data\",\"msg\"}",
                         "schema": {
                             "type": "string"
                         }
